Version 0.99.9 (CVS)

  Bugfixes:
    - Modules "index" and "verbatim" fixed.
    - Fixed path searching in Metapost.
    - Fixed paper size handling (in dvips, dvipdfm, ps2pdf).

Version 0.99.8 (2004-08-27)

  Features:
    - Support for e-TeX and Omega.
    - Support for package "index".
    - New directive "onchange".
    - Support for \includeonly.
    - Option --maxerr to display only the first errors.

  Bugfixes:
    - Portability improvement (for Cygwin and hopefully others).
    - Improved the semantics of directives.

Version 0.99.7 (2004-02-20)

  Features:
    - Support for VTeX.
    - Directives "watch" and "clean" for tables of contents and such.
    - Support for graphics conversion using ImageMagick (lots of new formats).
    - Support for packages "moreverb", "verbatim", "hyperref", "beamer".
    - Support for post-processing through dvipdfm.
    - New frontend "rubber-pipe" with the behaviour of a filter.
    - New module "expand" to expand inputs and bibliographies.
    - Support for Literate Haskell code (with lhs2TeX).
    - Error messages are now issued in the style of GNU compilers.
    - Compilation by pdfTeX into DVI.
    - Gzipping of the final document, command-line option "-z".

  Bugfixes:
    - Error-like messages from pdfTeX are now correctly handled.
    - Modules are handled correctly when compiling several documents at once.
    - Better dependency analysis for MetaPost.
    - Macro arguments can now contain line breaks.

  Packaging:
    - Introduced Texinfo documentation.

Version 0.99.6 (2003-04-09)

  Features:
    - Handling of \graphicspath.
    - Conversion of XFig figures to combined EPS/LaTeX.
    - Parsing of MetaPost log files for errors.
    - Automatic JPEG to EPS conversion (with jpeg2ps).
    - Support for packages "epsfig" and "natbib".
    - Rubber directives in source comments.
    - Directives for specifying paths for LaTeX and BibTeX.
    - Directives to control the operation of Makeindex.