@@ -94,7 +94,7 @@ def match_brace (str):
 def count_braces (str):
 	"""
 	Count the number of opening and closing braces in a string and return the
-	difference, i.e. the nomber of levels open at the end.
+	difference, i.e. the number of levels open at the end.
 	"""
 	level = 0
 	for pos in range(0, len(str)):
@@ -391,11 +391,13 @@ class Converter (object):
 	"""
 	This class represents a set of translation rules that may be used to
 	produce input files. Objects contain a table of rewriting rules to deduce
-	potential source names from the target's name, each rule associated to a
-	given plugin name. Plugins are expected to contain a method 'convert' that
-	take as argument the source (an existing file), the target, and the
-	environment, and that returns a dependency node or None if the rule is not
-	applicable.
+	potential source names from the target's name, and each rule has a give
+	weight that indicates how expensive the translation is.
+
+	Each rule associated to a given plugin name. Plugins are expected to
+	contain a method 'convert' that take as argument the source (an existing
+	file), the target, and the environment, and that returns a dependency node
+	or None if the rule is not applicable.
 	"""
 	def __init__ (self, rules, plugins):
 		"""
@@ -403,29 +405,31 @@ class Converter (object):
 		dictionary that associates regular expressions (to match the target
 		names against) with dictionaries. Each of these dictionaries
 		associates templates (that depend on the regular expression) for the
-		source name with lists of plugin names. See graphics.__init__ for an
-		example. The third argument is the plugin set to use.
+		source name with lists of couples (weight, plugin name). The third
+		argument is the plugin set to use.
+		See graphics.__init__ for an example.
 		"""
 		self.rules = {}
 		for key, val in rules.items():
 			self.rules[re.compile(key)] = val
 		self.plugins = plugins
 
-	def add_rule (self, target, source, module):
+	def add_rule (self, target, source, weight, module):
 		"""
 		Define a new conversion rule. The arguments are, respectively, the
 		expression to match the target against, the source name deduced from
-		it, and the module to use when a source is found. If another rule
-		exists for the same translation, the new one has priority over it.
+		it, the weight of the rule and the module to use when a source is
+		found. If another rule exists for the same translation, the new one
+		has priority over it.
 		"""
 		e = re.compile(target)
 		if not self.rules.has_key(e):
 			self.rules[e] = {}
 		dict = self.rules[e]
 		if dict.has_key(source):
-			dict[source].insert(0, module)
+			dict[source].insert(0, (weight, module))
 		else:
-			dict[source] = [module]
+			dict[source] = [(weight, module)]
 
 	def may_produce (self, name):
 		"""
@@ -438,14 +442,15 @@ class Converter (object):
 				return 1
 		return 0
 
-	def __call__ (self, target, env, safe=1):
+	def __call__ (self, target, env, safe=0):
 		"""
 		Search for an applicable rule for the given target. If such a rule is
-		found, return the dependency node for the target according to this
-		rule, otherwise return None. If the optional argument 'safe' is true,
-		then a dependency node is returned only if the source file may not be
-		generated by the same converter.
+		found, return the dependency node for the target with the least weight
+		according to this rule, otherwise return None. If the optional
+		argument 'safe' is true, then a dependency node is returned only if
+		the source file may not be generated by the same converter.
 		"""
+		conv = []
 		for dest, rules in self.rules.items():
 			m = dest.match(target)
 			if not m:
@@ -456,10 +461,15 @@ class Converter (object):
 					continue
 				if safe and exists(target) and self.may_produce(source):
 					return DependLeaf([target], env.msg)
-				for mod in mods:
+				for (weight, mod) in mods:
 					if not self.plugins.register(mod):
 						continue
-					dep = self.plugins[mod].convert(source, target, env)
-					if dep:
-						return dep
-		return None
+					conv.append((weight, source, target, mod))
+
+		conv.sort()
+		for (weight, source, target, mod) in conv:
+			dep = self.plugins[mod].convert(source, target, env)
+			if dep:
+				return (weight, dep)
+
+		return (None, None)
